objects/Email_Notification__c.object
<CustomObject>
    <description>Object containing records of emails sent to users who have subscribed.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>The name of the Account the user has subscribed to. (Leaving this long because some dealers have long names).</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup to the account the user has subscribed to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealership_Id__c</fullName>
        <description>The tools Id of the dealership the user has subscribed to.</description>
        <label>Dealership Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location where the work order was completed.</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Request_Inspection_Fullfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Request Inspection Fullfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Work_Order_Completed_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, the workflow: Send Work Order Completed Email should fire.</description>
        <label>Send Work Order Completed Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Completed_Date_Time__c</fullName>
        <label>Service Appointment Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Status__c</fullName>
        <label>Service Appointment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Work_Type__c</fullName>
        <label>Service Appointment Work Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_WorkOrder_Key__c</fullName>
        <externalId>true</externalId>
        <label>User WorkOrder Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Number__c</fullName>
        <description>The number of  the work order if the email subscription was for when a work order closes fo an account.</description>
        <label>Work Order Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_VINs__c</fullName>
        <description>The list of VINs from all WOLIs associated with the Work Order the Email Notification record is being created for.</description>
        <label>Work Order VINs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Email Notification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EN-{000000}</displayFormat>
        <label>Email Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>